2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/32_null.deca
// Description:
//    Programme : utilisation de null
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 19/01/2024
class A {
    protected int x;
}
{
    A a = null;
}