2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/11_FieldSanasSemi.deca
// Description:
//    Programme declaration d'un champ mais sans ;
// Resultats:
//      Programme incorrecte syntaxiquement : 11:0: missing ';' at '}'
// Historique:
//    cree le 16/01/2023

class A {
    protected int x

}